source/maas-toolbox/yaml/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maas-toolbox
  labels:
    name: maas-toolbox
