source/maas-toolbox/yaml/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maas-toolbox
  namespace: maas-toolbox
  labels:
    app: maas-toolbox
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: maas-toolbox
